--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 2_Hardware/Etape_1/bin/main
 2_Hardware/Etape_1/bin/main
 .DS_Store
+1_Software/Etape_4/bin/main
+1_Software/Etape_2/bin/main
+1_Software/Etape_2/bin/main
+1_Software/Etape_5/bin/main
+1_Software/Etape_2/bin/main
+1_Software/Etape_3/bin/main
